Image Responsiveness: fixed responsiveness on mobile for the project images, they were squished and uneven

--- a/client/src/components/Projects/projects.css
+++ b/client/src/components/Projects/projects.css
@@ -66,5 +66,6 @@
 @media (min-width: 320px) and (max-width: 480px) {
     .project__img {
         max-width: 300px;
+        height: 150px;
     }
 }
